--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ author :
   email : blah@email.test
   github : markijbema
   twitter : markijbema
-  feedburner : feedname
+  feedburner : MarkIjbemasBlog
 
 # The production_url is only used when full-domain names are needed
 # such as sitemap.txt
