--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ title : Marks Blog
 tagline: I learnt something today!
 author :
   name : Mark IJbema
-  email : blah@email.test
+  email : markijbema@gmail.com
   github : markijbema
   twitter : markijbema
   feedburner : MarkIjbemasBlog
@@ -26,7 +26,7 @@ author :
 # Else if you are pushing to username.github.io, replace with your username.
 # Finally if you are pushing to a GitHub project page, include the project name at the end.
 #
-production_url : http://username.github.io
+production_url : http://markijbema.github.io
 
 # All Jekyll-Bootstrap specific configurations are namespaced into this hash
 #
